# customer_churn

backend/: Dockerfile  bank_churn_ann.h5  main.py  pyproject.toml  requirements.txt  scaler.pkl
frontend/: streamlit_app.py
