[tool.poetry]
name = "customer-churn"
version = "0.1.0"
description = "Customer Churn Prediction API using FastAPI and TensorFlow"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
tensorflow = "^2.12.0"
pydantic = "^1.10.13"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
